--- a/src/pages/AddNewService/AddNewService.css
+++ b/src/pages/AddNewService/AddNewService.css
@@ -10,3 +10,9 @@
     margin-bottom: 10px;
     padding: 10px 20px;
 }
+
+@media screen and (max-width:768px) {
+    .form input, textarea {
+        width: 80%;
+    }
+}
